--- a/02_Seurat_analysis/01_Script/Figures.Rmd
+++ b/02_Seurat_analysis/01_Script/Figures.Rmd
@@ -6,196 +6,14 @@ output:
   html_document:
     code_folding: hide
     code_download: true
-knit: (function(inputFile, encoding) {rmarkdown::render(inputFile, encoding = encoding, output_dir = "/home/nozaism/Workspace/01_These/01_Project/Myc_Pten_Paper/Myc_Repo_2/02_Seurat_analysis/02_Output/Html_report")})
 editor_options: 
   chunk_output_type: console
 ---
 
-```{r}
-# TO DO BEFORE PUBLISH
-#change path output
-
-FeaturePlot(T.Seurat, features = "Nkg7",col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-```
-
-
-```{r}
-# REVIEW to check with DOMIE
-Idents(T.Seurat) <- "integrated_snn_res.1.8"
-T.Seurat@meta.data$manualclusters = "nothing"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "4"),]$manualclusters = "4"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "1"),]$manualclusters = "1"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "9"),]$manualclusters = "9"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "12"),]$manualclusters = "12"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "11"),]$manualclusters = "11"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "19"),]$manualclusters = "19"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "13"),]$manualclusters = "13"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "17"),]$manualclusters = "17"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = c("10","16")),]$manualclusters = "10,16"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "15"),]$manualclusters = "15"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = c("0","5")),]$manualclusters = "0,5"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "22"),]$manualclusters = "22"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "21"),]$manualclusters = "21"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = c("20","18","14")),]$manualclusters = "20,18,14"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = c("8","2","3","23")),]$manualclusters = "8,2,3,23"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "6"),]$manualclusters = "6"
-T.Seurat@meta.data[WhichCells(T.Seurat, slot = "integrated_snn_res.1.8", idents = "7"),]$manualclusters = "7"
-
-DimPlot(T.Seurat, group.by = "manualclusters")
-#cluster specific gene like Chopp et al
-Idents(T.Seurat) <- "manualclusters"
-Allmarker <- FindAllMarkers(T.Seurat)
-write.table(Allmarker,file="/home/nozaism/Workspace/01_These/01_Project/Myc_Pten_Paper/Allmarker.csv",sep="\t",quote=F)
-
-
-FeaturePlot(T.Seurat, features = "Myc",cols = c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"),order=T)
-FeaturePlot(T.Seurat, features = "Myc",order=T,cols = c("lightyellow","red"))
-#almost no capture, regulon Myc 
-
-#SCENIC
-
-### SCRIPT FROM Robj_scenic_open.rmd
-## LOAD OUPUT FILES FROM PySCENIC
-motifs=read.csv("/home/nozaism/Workspace/02_Docker/Scenic/OUTPUT/motifs.csv")
-adjacencies=read.csv("/home/nozaism/Workspace/02_Docker/Scenic/OUTPUT/adjacencies-output.csv",sep="\t")
-regulons=read.table("/home/nozaism/Workspace/02_Docker/Scenic/OUTPUT/regulons.tsv",sep = "\t",header=T)
-aucmtx= t(read.csv("/home/nozaism/Workspace/02_Docker/Scenic/OUTPUT/aucell-output.csv",sep="\t",row.names = 1,header=T))
-
-DefaultAssay(T.Seurat) <- "integrated"
-#creer nouvel assay AUC et met data de AUC matrice
-#DefaultAssay(Seurat) <- "integrated"
-T.Seurat[["AUC"]] <- CreateAssayObject(counts = aucmtx[,colnames(T.Seurat)])
-
-#load all object with AUC
-#T.Seurat_rename <- readRDS("/home/nozaism/Workspace/05_M2_Rstudio/Tseurat_rename.RData")
-
-FeaturePlot(T.Seurat, features = "auc_Myc...",col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-
-#attention add mat et meth
-
-#clustering method
-#by default Louvain algorithm
-#We used the Seurat graph based clustering algorithm to identify clusters of cells (using 12 dimensions and 
-#a coarse grained resolution of 1)
-
-#We used FindClusters function, wich use SNN (or/and KNN ??) and Louvain algorithm for optimization, to identify clusters of cells (using 12 dimensions and 
-#a coarse grained resolution of 1)
-#used k-means clustering
-
-
-
-# TO keep
-FeaturePlot(T.Seurat,features = c("Sell","Nkg7"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(T.Seurat,features = c("Cd4","Cd8b1"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-# DN and DP 
-FeaturePlot(T.Seurat,features = c("Ptcra","Trac","Trbc1"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(T.Seurat,features = c("Il2ra","Tcf7"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-
-#DP blast
-FeaturePlot(T.Seurat,features = c("Cdk1","Pcna","Mki67"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#Dp small
-FeaturePlot(T.Seurat,features = c("Rag1"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#chemo recept
-FeaturePlot(T.Seurat,features = c("Ccr9","Ccr7"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#DP vs SP
-FeaturePlot(T.Seurat,features = c("Ccnd3","Ccnd2"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(T.Seurat,features = c("Dntt"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#early SP
-FeaturePlot(T.Seurat,features = c("Cd69"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#CD8 SP
-FeaturePlot(T.Seurat,features = c("Ly6c2"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(T.Seurat,features = c("Gzma","Ccl5"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#naive SP
-FeaturePlot(T.Seurat,features = c("Ccr7"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-#Treg
-FeaturePlot(T.Seurat,features = c("Ikzf2","Il2ra","Foxp3"),col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-
-# Signature from chopp
-
-cd8_features <- list(c('Ahnak','Bace1','Amica1','Atp8b4','Cd226','Adgrg5','Icam1','Cd7','Cst7','Ctsw','Il2rb', 'Runx3', 'Cxcr6','Plac8', 'Itgae', 'Ly6c2','Nkg7', 'Prf1','Tspan9','Limk1','Klrd1','Chst15','Basp1'))
-
-
-Btbd11
-Ccdc102a
-Cyth4
-Ehd1
-Eng
-Ggt1
-Glipr2
-Gpr68
-Tagln2
-
-
-
-cd4_features <- list(c("Dusp1","Dusp5","Extl3","Gata3","Got1","Gpr183","Gpr83","Id2","Igfbp4","Il17rb","Il6ra","Il7r","Itgb3","Itm2a"))
-
-#IM CD8
-IM8_features <- list(c("B2m","Satb1","Tuba4a","Ccr9","Cd8b1","Cd8a","Slfn2","Tubb5","Rhoh","Rgcc","Gimap6","Bzw2","Lztfl1","Sept9","Emb","Actn1","Ubac2","Sepp1","Anapc5","Hmgn2"))
-
-
-
-
-
-
-
-
-test <- AddModuleScore(T.Seurat, features =IM8_features, name="IMCD8" )
-
-FeaturePlot(test, features = "signature1",col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(test, features = "IMCD81",col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-
-
-
-##### modif delphine domie
-FeaturePlot(T.Seurat,features = "percent.mito",col=c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"))
-FeaturePlot(T.Seurat,features = "percent.mito")
-
-VlnPlot(T.Seurat, group.by = "integrated_snn_res.1.8",features = "percent.mito")
-VlnPlot(T.Seurat, group.by = "manualclusters",features = "percent.mito")
-
-#bar plot cluster 6
-DimPlot(T.Seurat.thymus)
-
-Idents(T.Seurat.thymus) <- "manualclusters"
-T.Seurat.thymusbar <- subset(T.Seurat.thymus,  idents = c("6")) #to only keep cluster needed for the plot
-
-data4 <- data.frame(t(prop.table(table(T.Seurat.thymusbar@meta.data$HTO,T.Seurat.thymusbar@meta.data$manualclusters),2))*100)
-
-Cluster <- data4$Var1
-HTO <- data4$Var2
-Percentage <- data4$Freq
-# Stacked bar plot
-cols <- c("Myc- PTEN- thymus" = "#FF99FF", "MYC- thymus" = "coral1", "PTEN- thymus" = "cyan3", "WT thymus" = "chartreuse3")
-ggplot(data4, aes(fill=HTO, y=Percentage, x=Cluster)) + 
-    geom_bar(position="stack", stat="identity", width=0.7)+
-   xlab("Thymic Clusters")+ylab("Percentage")+ theme(legend.position="bottom")+scale_fill_manual(values =cols, labels=c("Myc Pten","Myc","Pten","WT")) +theme_light()+geom_hline(yintercept=c(25,50,75), linetype="dashed", color = "grey60")
-
-
-datathym <- data.frame(prop.table(t(prop.table(table(T.Seurat.thymus@meta.data$HTO,T.Seurat.thymus@meta.data$manualclusters),1)),1)*100)
-
-df1 <- datathym[6,]
-df2 <- datathym[14,]
-df3 <- datathym[22,]
-df4 <- datathym[30,]
-
-dfcluster6 <- rbind(df1,df2,df3,df4)
-
-Cluster <-dfcluster6$Var1
-HTO <- dfcluster6$Var2
-Percentage <- dfcluster6$Freq
-# Stacked bar plot
-cols <- c("Myc- PTEN- thymus" = "#FF99FF", "MYC- thymus" = "coral1", "PTEN- thymus" = "cyan3", "WT thymus" = "chartreuse3")
-ggplot(dfcluster6, aes(fill=HTO, y=Percentage, x=Cluster)) + 
-    geom_bar(position="stack", stat="identity", width=0.7)+
-   xlab("Thymic Clusters")+ylab("Percentage")+ theme(legend.position="bottom")+scale_fill_manual(values =cols, labels=c("Myc Pten","Myc","Pten","WT")) +theme_light()+geom_hline(yintercept=c(25,50,75), linetype="dashed", color = "grey60")
-```
-
-
-
 This Rmarkdown contain code to obtain all plot necessary to produce our bioinformatical related figures. Final figure anotation and layout were then produce with inkscape.
 
 ```{r,include=FALSE}
-OUTPUT_PATH <- ("/home/nozaism/Workspace/01_These/01_Project/Myc_Pten_Paper/Output_repo/")
+OUTPUT_PATH <- (paste0(WORKING_DIR,"/02_Seurat_analysis/02_Output/"))
 
 library(Seurat)
 library(gridExtra)
@@ -205,8 +23,7 @@ library(graphics)
 library(ggthemes)
 library(clusterProfiler)
 library (stringr)
-#Path to the analysis folder
-WORKSPACE <- "/home/nozaism/Workspace/01_These/01_Project/Myc_Pten_Paper/Myc_Repo_2/"
+
 ```
 
 ```{r,include=FALSE}
@@ -476,12 +293,19 @@ ggplot(tableauYFP, aes(x = Cluster, Genotypes)) +
 ```
 
 ### Supplementary 2 {.tabset}
+```{r}
+FeaturePlot(T.Seurat, features = "Myc",cols = c("grey", "light blue","cyan3","cyan4","dodgerblue3","blue","mediumslateblue","purple","orchid3","red","brown","black"),order=T)
+```
+
+
+
+
+### Supplementary 3 {.tabset}
 #### Panel A
 ```{r}
 Idents(T.Seurat) <- "integrated_snn_res.1.8"
 #DGE between our two CD8 naive clusters
-#write.table(dgecd8_data,file=paste(WORKSPACE, "02_Seurat_analysis/01_Script/dgeCD8data.txt",sep=""),sep="\t",quote=F)
-dgecd8_data <- read.table(paste(WORKSPACE, "02_Seurat_analysis/01_Script/dgeCD8data.txt",sep=""), sep = "\t")
+dgecd8_data <- read.table(paste(WORKING_DIR, "/02_Seurat_analysis/01_Script/dgeCD8data.txt",sep=""), sep = "\t")
 # bar plot
 #add abs value to table
 dgecd8_data$abs <- abs(dgecd8_data$avg_logFC) 
@@ -512,8 +336,7 @@ ggplot(dfcd8markers, aes(x = dfcd8markers$genename, y = dfcd8markers$avg_logFC, 
 ```{r}
 Idents(T.Seurat) <- "integrated_snn_res.1.8"
 #DGE between 0 and 12
-#write.table(dgecd4_data,file=paste(WORKSPACE, "02_Seurat_analysis/01_Script/dgeCD4data.txt",sep=""),sep="\t",quote=F)
-dgecd4_data <- read.table(paste(WORKSPACE, "02_Seurat_analysis/01_Script/dgeCD4data.txt",sep=""), sep = "\t")
+dgecd4_data <- read.table(paste(WORKING_DIR, "/02_Seurat_analysis/01_Script/dgeCD4data.txt",sep=""), sep = "\t")
 # bar plot
 #add abs value to table
 dgecd4_data$abs <- abs(dgecd4_data$avg_logFC) 
@@ -552,7 +375,7 @@ backgroundrow <- rownames(background)
 ```
 
 ```{r,message=FALSE,warning=FALSE}
-genecomprow <- read.table(paste(WORKSPACE, "02_Seurat_analysis/01_Script/cluster1v4.txt",sep=""), sep = "\t")
+genecomprow <- read.table(paste(WORKING_DIR, "/02_Seurat_analysis/01_Script/cluster1v4.txt",sep=""), sep = "\t")
 genecomprow$x = as.character(genecomprow$x)
 genecomprow <- genecomprow[,1]
 
@@ -568,7 +391,7 @@ dotplot(CPenrich, showCategory=15,color = "p.adjust",x="count") #+ coord_flip()+
 #### Panel D
 
 ```{r}
-genecomprow <- read.table(paste(WORKSPACE, "02_Seurat_analysis/01_Script/cluster0vs12.txt",sep=""), sep = "\t")
+genecomprow <- read.table(paste(WORKING_DIR, "/02_Seurat_analysis/01_Script/cluster0vs12.txt",sep=""), sep = "\t")
 genecomprow$x = as.character(genecomprow$x)
 genecomprow <- genecomprow[,1]
 ####
@@ -581,7 +404,7 @@ CPenrich <- enrichGO(gene= genecomprow, OrgDb = 'org.Mm.eg.db', ont="BP",keyType
 dotplot(CPenrich, showCategory=15,color = "p.adjust",x="count")+ scale_y_discrete(labels=function(x)str_wrap(x, width=40))
 ```
 
-### Supplementary 3
+### Supplementary 4
 #### Panel A
 ```{r}
 #DOT plot eyFP and TGD on CD8 effector and memory
